--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
       - run: npm run build
 
       # Create a zip file with all files required by the module to add to the release
-      - run: zip -r ./module.zip module.json LICENSE module.js module.js.map style.css templates/ languages/ packs/
+      - run: zip -r ./module.zip module.json LICENSE module.js module.js.map style.css samples/ languages/ images/sequencer.png typings/ ext/
 
       # Create a release for this specific version
       - name: Update Release with Files
